manifests/vaultwarden/07-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: minicloud-ca
    cert-manager.io/duration: "2160h"
    cert-manager.io/renew-before: "720h"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault-pw.10.0.0.200.nip.io
        - vault-pw.devandre.sbs
      secretName: vaultwarden-tls
  rules:
    - host: vault-pw.10.0.0.200.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
    - host: vault-pw.devandre.sbs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
